--- a/src/assets/admin/scss/icons.scss
+++ b/src/assets/admin/scss/icons.scss
@@ -71,7 +71,7 @@
 .tabletennis-icon{background-image: url('../img/icons/tabletennis-icon.svg'); height: 24px; width: 24px;}
 .horseriding-icon{background-image: url('../img/icons/horseriding-icon.svg'); height: 24px; width: 24px;}
 .basketball-icon{background-image: url('../img/icons/basketball-icon.svg'); height: 24px; width: 24px;}
-
+.atheletics-icon{background-image: url('../img/icons/atheletics-icon.svg'); height: 24px; width: 24px;}
 
 .filter-icon{background-image: url('../img/icons/filter-icon.png'); height: 18px; width: 18px;}
 .info-icon{background-image: url('../img/icons/info.png'); height: 18px; width: 18px;}
