--- a/src/assets/scss/icons.scss
+++ b/src/assets/scss/icons.scss
@@ -54,6 +54,7 @@
 .biometrics-icon{background-image: url('../img/icons/biometrics-icon.svg'); height: 24px; width: 24px;}
 .boarding-icon{background-image: url('../img/icons/boarding.svg'); height: 24px; width: 24px;}
 .gpsenabled-icon{background-image: url('../img/icons/gpsenabled-icon.svg'); height: 24px; width: 24px;}
+.atheletics-icon{background-image: url('../img/icons/atheletics-icon.svg'); height: 24px; width: 24px;}
 
 .air-conditioner{background-image: url('../img/icons/air-conditioner.svg'); height: 24px; width: 24px;}
 .wifi-icon{background-image: url('../img/icons/wifi-icon.svg'); height: 24px; width: 24px;}
